add bufferpool v0,bufferpool test, diskmanager test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ add_executable(mini_db
     src/main.cpp
     src/storage/disk_manager.cpp
 )
+
+add_executable(test_disk tests/test_disk_manager.cpp src/storage/disk_manager.cpp)
+add_executable(test_bufferpool tests/test_buffer_pool.cpp src/storage/buffer_pool.cpp src/storage/disk_manager.cpp)
