--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(db_tests
   test_buffer_pool.cpp
   test_disk_manager.cpp
   test_table_heap.cpp
+  test_catalog.cpp
 )
 
 target_link_libraries(db_tests
