--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,7 @@ add_executable(db_tests
   test_disk_manager.cpp
   test_table_heap.cpp
   test_catalog.cpp
+  test_table_iterator.cpp
 )
 
 target_link_libraries(db_tests
